--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,5 +49,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - projektname/Lebenslauf-jdid.pdf
-    - lib/images/
+    - lib/images/java.png
+    - lib/images/saage.jpeg
+    - lib/images/Flutter.png
