--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,3 +52,4 @@ flutter:
     - lib/images/java.png
     - lib/images/saage.jpeg
     - lib/images/Flutter.png
+    - lib/Screenshots/Startseite.png
