--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  url_launcher: ^6.0.9 # Add this line to include the url_launcher package
+  # Firebase core package
+  firebase_core: ^2.10.0
+  # Firebase authentication package
+  firebase_auth: ^4.6.0
+  # Cloud Firestore package
+  cloud_firestore: ^4.9.0
+
+  url_launcher: ^6.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
